# BM-PetriNet

./: Architecture.drawio  LICENSE  PN-TLR.py  PN-main.py  PN-mat.py  PN-vis.py  README.md  explore.py  pyproject.toml  requirements.txt  setup.cfg  visualization.py
.github/workflows/: pytest-check.yml
kgmlpn/: main.py  node.py  pathway.py  transition.py  ui.py
src/KGML_PN/: main.py  main_new.py  node.py  pathway.py  ui.py  ui_qt5.py
src/KGML_PetriNet/: main.py  node.py  pathway.py  ui.py
src/kgmlpn/: groups.py  transition.py  ui.py
tests/: test.py
