[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "KGML_PN"
version = "0.0.1"
authors = [{name="K.H.P van der Burg", email ="koenvanderburg@live.nl"},
            {name="J. Hamelink", email ="jdhamelink0@gmail.com"}] 
description = "A package to convert KGML files to Petri Nets"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
 "matplotlib~=3.7.1",
 "numpy~=1.24",
 "pytest~=7.3.1"
]

[project.urls]
"Homepage" = "https://github.com/KoenVanderBurg/BM-PetriNet"

[project.scripts]
KGML_PN = "KGML_PN.main:main"

