[metadata]
name = kgmlpn
version = 0.0.1
authors = K. van der Burg, J. Hamelink
author_emails = koenvanderburg@live.nl, jdhamelink0@gmail.com
description = Turning KGML files into Petri Nets
long_description = file: README.md
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    ansiterm == 1.1
    contourpy == 1.0.7
    cycler == 0.11.0
    fonttools == 4.39.4
    graph-tools == 1.11
    kiwisolver == 1.4.4
    matplotlib == 3.7.1
    mplcursors == 0.5.2
    networkx == 3.1
    numpy == 1.24.3
    packaging == 23.1
    perlcompat == 1.1
    Pillow == 9.5.0
    pyparsing == 3.0.9
    Pytess == 1.0.0
    python-dateutil == 2.8.2
    six == 1.16.0
    tbdump == 1.4

[options.entry_points]
console_scripts = 
    kgmlpn = kgmlpn.main:main
