[metadata]
name = kgmlpn
version = 0.0.1
authors = K. van der Burg, J. Hamelink
author_emails = koenvanderburg@live.nl, jdhamelink0@gmail.com
description = Turning KGML files into Petri Nets
long_description = file: README.md
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    matplotlib == 3.7.1

[options.entry_points]
console_scripts = 
    kgmlpn = kgmlpn.main:main
